proyecto 2/target/generated-sources/antlr4/com/compiladores/primero/aritmetica/aritmeticaParser.java
// Generated from aritmetica.g4 by ANTLR 4.4
package com.compiladores.primero.aritmetica;

	import java.util.Map;
	import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class aritmeticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, PROGRAM=6, VAR=7, PRINTLN=8, PARA=9, 
		WHILE=10, PROCEDIMIENTO=11, FUNCION=12, RETURN=13, IF=14, ELSE=15, ELSEIF=16, 
		PLUS=17, MINUM=18, MULT=19, DIV=20, MASMAS=21, MENOSMENOS=22, AND=23, 
		OR=24, NOT=25, GT=26, LT=27, GEQ=28, LEQ=29, EQ=30, NEQ=31, ESP=32, ASSIGN=33, 
		BRACKET_OPEN=34, BRACKET_CLOSE=35, PAR_OPEN=36, PAR_CLOSE=37, SEMICOLON=38, 
		BOOLEAN=39, ID=40, NUMBER=41, WS=42;
	public static final String[] tokenNames = {
		"<INVALID>", "'\"'", "'*/'", "'/*'", "'//'", "'Mensaje '", "'chapinprogram '", 
		"'var '", "'imprimir '", "'for'", "'while'", "'procedimiento '", "'funcion '", 
		"'return '", "'if'", "'else'", "'elseif'", "'+'", "'-'", "'*'", "'/'", 
		"'++;'", "'--;'", "'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", "'<='", 
		"'=='", "'!='", "' '", "'='", "'{'", "'}'", "'('", "')'", "';'", "BOOLEAN", 
		"ID", "NUMBER", "WS"
	};
	public static final int
		RULE_start = 0, RULE_var_decl = 1, RULE_var_assign = 2, RULE_println = 3, 
		RULE_conditional = 4, RULE_expression = 5, RULE_factor = 6, RULE_term = 7, 
		RULE_program = 8, RULE_mensaje = 9, RULE_concatenar = 10, RULE_comentarioliniea = 11, 
		RULE_comentariobloke = 12, RULE_comentario = 13, RULE_elseif = 14, RULE_ciclofor = 15, 
		RULE_ciclowhile = 16, RULE_procedimiento = 17, RULE_funcion = 18, RULE_sentence = 19;
	public static final String[] ruleNames = {
		"start", "var_decl", "var_assign", "println", "conditional", "expression", 
		"factor", "term", "program", "mensaje", "concatenar", "comentarioliniea", 
		"comentariobloke", "comentario", "elseif", "ciclofor", "ciclowhile", "procedimiento", 
		"funcion", "sentence"
	};

	@Override
	public String getGrammarFileName() { return "aritmetica.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		Map<String, Object> symbolTable = new HashMap<String, Object>();

	public aritmeticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(aritmeticaParser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(aritmeticaParser.SEMICOLON, 0); }
		public TerminalNode VAR() { return getToken(aritmeticaParser.VAR, 0); }
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(VAR);
			setState(43); ((Var_declContext)_localctx).ID = match(ID);
			setState(44); match(SEMICOLON);
			symbolTable.put((((Var_declContext)_localctx).ID!=null?((Var_declContext)_localctx).ID.getText():null), 0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignContext extends ParserRuleContext {
		public Token ID;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(aritmeticaParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(aritmeticaParser.ASSIGN, 0); }
		public TerminalNode SEMICOLON() { return getToken(aritmeticaParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterVar_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitVar_assign(this);
		}
	}

	public final Var_assignContext var_assign() throws RecognitionException {
		Var_assignContext _localctx = new Var_assignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); ((Var_assignContext)_localctx).ID = match(ID);
			setState(48); match(ASSIGN);
			setState(49); ((Var_assignContext)_localctx).expression = expression();
			setState(50); match(SEMICOLON);
			symbolTable.put((((Var_assignContext)_localctx).ID!=null?((Var_assignContext)_localctx).ID.getText():null), ((Var_assignContext)_localctx).expression.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintlnContext extends ParserRuleContext {
		public ExpressionContext expression;
		public TerminalNode SEMICOLON() { return getToken(aritmeticaParser.SEMICOLON, 0); }
		public TerminalNode PRINTLN() { return getToken(aritmeticaParser.PRINTLN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintlnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_println; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterPrintln(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitPrintln(this);
		}
	}

	public final PrintlnContext println() throws RecognitionException {
		PrintlnContext _localctx = new PrintlnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_println);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); match(PRINTLN);
			setState(54); ((PrintlnContext)_localctx).expression = expression();
			setState(55); match(SEMICOLON);
			System.out.println(((PrintlnContext)_localctx).expression.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(aritmeticaParser.ELSE, 0); }
		public List<ElseifContext> elseif() {
			return getRuleContexts(ElseifContext.class);
		}
		public TerminalNode IF() { return getToken(aritmeticaParser.IF, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(aritmeticaParser.PAR_CLOSE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(aritmeticaParser.PAR_OPEN, 0); }
		public List<TerminalNode> BRACKET_OPEN() { return getTokens(aritmeticaParser.BRACKET_OPEN); }
		public TerminalNode BRACKET_OPEN(int i) {
			return getToken(aritmeticaParser.BRACKET_OPEN, i);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<TerminalNode> BRACKET_CLOSE() { return getTokens(aritmeticaParser.BRACKET_CLOSE); }
		public ElseifContext elseif(int i) {
			return getRuleContext(ElseifContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode BRACKET_CLOSE(int i) {
			return getToken(aritmeticaParser.BRACKET_CLOSE, i);
		}
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_conditional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(IF);
			setState(59); match(PAR_OPEN);
			setState(60); expression();
			setState(61); match(PAR_CLOSE);
			setState(62); match(BRACKET_OPEN);
			setState(81);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << VAR) | (1L << PRINTLN) | (1L << ID))) != 0)) {
					{
					{
					setState(63); sentence();
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				{
				{
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << VAR) | (1L << PRINTLN) | (1L << ID))) != 0)) {
					{
					{
					setState(69); sentence();
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(75); elseif();
					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			}
			setState(83); match(BRACKET_CLOSE);
			setState(84); match(ELSE);
			setState(85); match(BRACKET_OPEN);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << VAR) | (1L << PRINTLN) | (1L << ID))) != 0)) {
				{
				{
				setState(86); sentence();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92); match(BRACKET_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Object value;
		public FactorContext t1;
		public FactorContext t2;
		public FactorContext t3;
		public FactorContext t4;
		public FactorContext t5;
		public FactorContext t6;
		public FactorContext t7;
		public FactorContext t8;
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public List<TerminalNode> NEQ() { return getTokens(aritmeticaParser.NEQ); }
		public TerminalNode EQ(int i) {
			return getToken(aritmeticaParser.EQ, i);
		}
		public List<TerminalNode> LT() { return getTokens(aritmeticaParser.LT); }
		public List<TerminalNode> GT() { return getTokens(aritmeticaParser.GT); }
		public TerminalNode PLUS(int i) {
			return getToken(aritmeticaParser.PLUS, i);
		}
		public TerminalNode NEQ(int i) {
			return getToken(aritmeticaParser.NEQ, i);
		}
		public List<TerminalNode> GEQ() { return getTokens(aritmeticaParser.GEQ); }
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public TerminalNode MINUM(int i) {
			return getToken(aritmeticaParser.MINUM, i);
		}
		public List<TerminalNode> LEQ() { return getTokens(aritmeticaParser.LEQ); }
		public TerminalNode LEQ(int i) {
			return getToken(aritmeticaParser.LEQ, i);
		}
		public List<TerminalNode> MINUM() { return getTokens(aritmeticaParser.MINUM); }
		public List<TerminalNode> PLUS() { return getTokens(aritmeticaParser.PLUS); }
		public List<TerminalNode> EQ() { return getTokens(aritmeticaParser.EQ); }
		public TerminalNode GT(int i) {
			return getToken(aritmeticaParser.GT, i);
		}
		public TerminalNode LT(int i) {
			return getToken(aritmeticaParser.LT, i);
		}
		public TerminalNode GEQ(int i) {
			return getToken(aritmeticaParser.GEQ, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); ((ExpressionContext)_localctx).t1 = factor();
			((ExpressionContext)_localctx).value =  (int)((ExpressionContext)_localctx).t1.value;
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUM) | (1L << GT) | (1L << LT) | (1L << GEQ) | (1L << LEQ) | (1L << EQ) | (1L << NEQ))) != 0)) {
				{
				setState(128);
				switch (_input.LA(1)) {
				case PLUS:
					{
					setState(96); match(PLUS);
					setState(97); ((ExpressionContext)_localctx).t2 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value + (int)((ExpressionContext)_localctx).t2.value;
					}
					break;
				case MINUM:
					{
					setState(100); match(MINUM);
					setState(101); ((ExpressionContext)_localctx).t2 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value - (int)((ExpressionContext)_localctx).t2.value;
					}
					break;
				case EQ:
					{
					setState(104); match(EQ);
					setState(105); ((ExpressionContext)_localctx).t3 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value == (int)((ExpressionContext)_localctx).t3.value;
					}
					break;
				case GT:
					{
					setState(108); match(GT);
					setState(109); ((ExpressionContext)_localctx).t4 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value > (int)((ExpressionContext)_localctx).t4.value;
					}
					break;
				case LT:
					{
					setState(112); match(LT);
					setState(113); ((ExpressionContext)_localctx).t5 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value < (int)((ExpressionContext)_localctx).t5.value;
					}
					break;
				case GEQ:
					{
					setState(116); match(GEQ);
					setState(117); ((ExpressionContext)_localctx).t6 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value >= (int)((ExpressionContext)_localctx).t6.value;
					}
					break;
				case LEQ:
					{
					setState(120); match(LEQ);
					setState(121); ((ExpressionContext)_localctx).t7 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value <= (int)((ExpressionContext)_localctx).t7.value;
					}
					break;
				case NEQ:
					{
					setState(124); match(NEQ);
					setState(125); ((ExpressionContext)_localctx).t8 = factor();
					((ExpressionContext)_localctx).value =  (int)_localctx.value != (int)((ExpressionContext)_localctx).t8.value;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public Object value;
		public TermContext t1;
		public TermContext t2;
		public TerminalNode MULT(int i) {
			return getToken(aritmeticaParser.MULT, i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> MULT() { return getTokens(aritmeticaParser.MULT); }
		public List<TerminalNode> DIV() { return getTokens(aritmeticaParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(aritmeticaParser.DIV, i);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitFactor(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_factor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); ((FactorContext)_localctx).t1 = term();
			((FactorContext)_localctx).value =  (int)((FactorContext)_localctx).t1.value;
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MULT || _la==DIV) {
				{
				setState(143);
				switch (_input.LA(1)) {
				case MULT:
					{
					setState(135); match(MULT);
					setState(136); ((FactorContext)_localctx).t2 = term();
					((FactorContext)_localctx).value =  (int)_localctx.value * (int)((FactorContext)_localctx).t2.value;
					}
					break;
				case DIV:
					{
					setState(139); match(DIV);
					setState(140); ((FactorContext)_localctx).t2 = term();
					((FactorContext)_localctx).value =  (int)_localctx.value / (int)((FactorContext)_localctx).t2.value;
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Object value;
		public Token NUMBER;
		public Token ID;
		public Token BOOLEAN;
		public ExpressionContext expression;
		public TerminalNode ID() { return getToken(aritmeticaParser.ID, 0); }
		public TerminalNode PAR_CLOSE() { return getToken(aritmeticaParser.PAR_CLOSE, 0); }
		public TerminalNode PAR_OPEN() { return getToken(aritmeticaParser.PAR_OPEN, 0); }
		public TerminalNode NUMBER() { return getToken(aritmeticaParser.NUMBER, 0); }
		public TerminalNode BOOLEAN() { return getToken(aritmeticaParser.BOOLEAN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aritmeticaListener ) ((aritmeticaListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_term);
		try {
			setState(159);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(148); ((TermContext)_localctx).NUMBER = match(NUMBER);
				((TermContext)_localctx).value =  Integer.parseInt((((TermContext)_localctx).NUMBER!=null?((TermContext)_localctx).NUMBER.getText():null));
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(150); ((TermContext)_localctx).ID = match(ID);
				((TermContext)_localctx).value =  symbolTable.get((((TermContext)_localctx).ID!=null?((TermContext)_localctx).ID.getText():null));
				}
				break;
			case BOOLEAN:
				enterOuterAlt(_localctx, 3);
				{
				setState(152); ((TermContext)_localctx).BOOLEAN = match(BOOLEAN);
				((TermContext)_localctx).value =  Boolean.parseBoolean((((TermContext)_localctx).BOOLEAN!=null?((TermContext)_localctx).BOOLEAN.getText():null));
				}
				break;
			case PAR_OPEN:
				enterOuterAlt(_localctx, 4);
				{
				setState(154); match(PAR_OPEN);
				setState(155); ((TermContext)_localctx).expression = expression();
				((TermContext)_localctx).value =  ((TermContext)_localctx).expression.value;
				setState(157); match(PAR_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public TerminalNode BRACKET_OPEN() { return getToken(aritmeticaParser.BRACKET_OPEN, 0); }
		public ProcedimientoContext procedimiento(int i) {
			return getRuleContext(ProcedimientoContext.class,i);
		}
		public List<CicloforContext> ciclofor() {
			return getRuleContexts(CicloforContext.class);
		}
		public ConditionalContext conditional(int i) {
			return getRuleContext(ConditionalContext.class,i);
		}
		public CiclowhileContext ciclowhile(int i) {
			return getRuleContext(CiclowhileContext.class,i);
		}
		public TerminalNode ID() { return getToken(aritmeticaParser.ID, 0); }
		public CicloforContext ciclofor(int i) {
			return getRuleContext(CicloforContext.class,i);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public List<CiclowhileContext> ciclowhile() {
			return getRuleContexts(CiclowhileContext.class);
		}
		public TerminalNode BRACKET_CLOSE() { return getToken(aritmeticaParser.BRACKET_CLOSE, 0); }
		public List<ProcedimientoContext> procedimiento() {
			return getRuleContexts(ProcedimientoContext.class);
		}
		public TerminalNode PROGRAM() { return getToken(aritmeticaParser.PROGRAM, 0); }
		public List<ConditionalContext> conditional() {
			return getRuleContexts(ConditionalContext.class);
		}
